# cc-codex-wrapper

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/ccx/: __main__.py  atomic.py  backup.py  cli.py  formats.py  loader.py  manifest.py  merge.py  scope.py
src/ccx/commands/: clean.py  init.py  launcher.py  restore.py  status.py  sync.py
src/ccx/renderers/: __init__.py  hooks.py  mcp.py  memory.py  passthrough.py  skills.py
tests/: conftest.py  test_atomic.py  test_backup.py  test_cli_clean.py  test_cli_init.py  test_cli_restore.py  test_cli_status.py  test_cli_sync.py  test_coalesce.py  test_launcher.py  test_layering.py  test_loader.py  test_manifest.py  test_merge.py  test_render_hooks.py  test_render_mcp.py  test_render_memory.py  test_render_passthrough.py  test_render_skills.py  test_scope.py
tests/fixtures/canonical_broken/: mcp.yaml
tests/fixtures/canonical_minimal/: AGENTS.md  hooks.yaml  mcp.yaml
tests/fixtures/canonical_minimal/skills/example/: SKILL.md
tests/fixtures/hooks/basic/: expected-cc-settings.json  expected-codex-hooks.json  input.yaml
tests/fixtures/mcp/http/: expected-codex.toml  input.yaml
tests/fixtures/mcp/stdio/: expected-claude.json  expected-codex.toml  input.yaml
