[project]
name = "ccx"
version = "0.1.0"
description = "One config source for Claude Code and Codex"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ccx = "ccx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
